# Eltex

./: .gitignore  README.md
src/lesson-2/task-1/: contact.c  contact.h  main.c  main.h  phonebook.c  phonebook.h
src/lesson-2/task-2/: calculator.c  calculator.h  main.c  main.h
src/lesson-3/task-1/: converter.c  converter.h  main.c  main.h  permissions.c  permissions.h  permissions_editor.c  permissions_editor.h  permissions_input.c  permissions_input.h  permissions_output.c
src/module-2/lesson-2/task-1/: CMakeLists.txt  contact.c  main.c  phonebook.c  phonebook.h
src/module-2/lesson-2/task-2/: CMakeLists.txt  calculator.c  calculator.h  main.c  main.h
src/module-2/lesson-3/task-1/: CMakeLists.txt  converter.h  main.c  main.h  permissions_editor.c  permissions_editor.h  permissions_input.h  permissions_output.h
src/module-3/lesson-0/task-1/: main.c
src/module-3/lesson-0/task-2/: main.c  main.h  max_line_finder.c  max_line_finder.h  max_number_finder.c  string_joiner.c  summator.c
src/module-3/lesson-0/task-3/: contact.c  contact.h  main.h  phonebook.c
src/module-3/lesson-0/task-4/: main.c
src/module-3/lesson-0/task-5/: main.c
src/module-3/lesson-1/task-1/: CMakeLists.txt  main.c
src/module-3/lesson-1/task-2/: CMakeLists.txt  main.c  main.h  max_line_finder.c  max_number_finder.c  max_number_finder.h  string_joiner.h  summator.c  summator.h
src/module-3/lesson-1/task-3/: CMakeLists.txt  main.c  phonebook.h
src/module-3/lesson-1/task-4/: CMakeLists.txt  main.c
src/module-3/lesson-1/task-5/: CMakeLists.txt  main.c  main.h
src/module-3/lesson-2/task-6/: client.c  main.c  server.c
src/module-3/lesson-2/task-7/: CMakeLists.txt  client.c  server.c
src/module-3/lesson-2/task-8/: CMakeLists.txt  main.c  main.h
src/module-3/lesson-2/task-9/: CMakeLists.txt  client.c  client.h  server.c  server.h
src/module-3/lesson-3/task-10/: CMakeLists.txt  main.c
src/module-3/lesson-3/task-12/: main.c
src/module-3/lesson-5/task-18/: CMakeLists.txt  client.c  server.c
src/module-4/: lab-work-1.md  lab-work-2.md  lab-work-3.md
src/module-4/lab-2/: lab-work-2.md
src/module-4/lab-2-opt/: lab-work-2-opt.md
src/module-4/lab-3/: lab-work-3.md
src/module-4/lab-3-opt/: lab-work-3-opt.md
src/module-4/lab-4/: lab-work-4.md
src/module-5/task-1/: hello.c
src/module-5/task-2/: proc.c
src/module-5/task-3/: Makefile  kbleds_task.c  kbsys.c  sysfs_task.c
src/module-5/task-4/: chardev.c
src/module-5/task-5/: Makefile  client.c  server.c
src/utils/: utils.c  utils.h
(+63 files in other folders)
